--- a/virtual-eltr/src/App.css
+++ b/virtual-eltr/src/App.css
@@ -2,9 +2,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: aliceblue;
+  
 }
 
+.imgimg {
+  background-image: url("./login.jpg");
+  background-size: cover;
+}
 button {
   border: none;
   outline: none;
@@ -21,7 +25,6 @@ button {
   width: 100%;
   min-height: 100vh;
   padding: 0 20px;
-  background: #e9e9e9;
   display: flex;
 }
 
@@ -87,36 +90,6 @@ button {
 }
 
 .login .loginContainer .errorMsg {
-  color: red;
+  color: white;
   font-size: 16px;
-}
-
-.hero {
-  width: 100%;
-  min-height: 100vh;
-  background: radial-gradient(
-    ellipse at left bottom,
-    rgba(22, 24, 47, 1) 0%,
-    rgba(38, 20, 72, 0.9) 59%,
-    rgba(17, 27, 75, 0.9) 100%
-  );
-}
-
-.hero nav {
-  background: #603bbb;
-  width: 100%;
-  padding: 20px 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.hero nav h2 {
-  color: #fff;
-}
-
-.hero nav button {
-  width: 86px;
-  padding: 8px 0;
-  background: #3a2b58;
 }
